--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- <base href="https://localhost:3000"> -->
+    <base href="https://localhost:3000">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Add new</title>
+    <title>EDIT</title>
     <style>
 
     </style>
 </head>
 <body>
-    <h2>Add new truyen tranh</h2>
-    <form action="./add" method="POST" enctype="multipart/form-data">
+    <h2>Edit truyen tranh</h2>
+    <form action="./edit" method="POST" enctype="multipart/form-data">
         <input type="text" name="ten" placeholder="Name"> <br>
         <input type="file" name="anhTruyenTranh"> <br>
         <input type="text" name="ngayxb" placeholder="Ngay xuat ban">   
-        <input type="submit" value="Add new">
+        <input type="submit" value="Edit">
     </form>
 </body>
 </html>
