--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <base href="https://localhost:3000">
+    <!-- <base href="https://localhost:3000"> -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EDIT</title>
@@ -11,11 +11,13 @@
 </head>
 <body>
     <h2>Edit truyen tranh</h2>
-    <form action="./edit" method="POST" enctype="multipart/form-data">
-        <input type="text" name="ten" placeholder="Name"> <br>
+    <form action="../edit" method="POST" enctype="multipart/form-data">
+        <input type="hidden" name="idDanhSach" value="<%- danhsach._id%>">
+        <input type="text" value="<%- danhsach.name %>" name="ten" placeholder="Name"> <br>
+        <img src="../upload/<%- danhsach.image%>" width="100" alt="">
         <input type="file" name="anhTruyenTranh"> <br>
-        <input type="text" name="ngayxb" placeholder="Ngay xuat ban">   
-        <input type="submit" value="Edit">
+        <input type="text" value="<%- danhsach.date_pub %>" name="ngayxb" placeholder="Ngay xuat ban">   
+        <input type="submit" value="Save">
     </form>
 </body>
 </html>
